fix: pr#20 added placeholder image for games covers game summary displayed with ellipsis on overflow

--- a/src/app/explore-page/explore-page.component.scss
+++ b/src/app/explore-page/explore-page.component.scss
@@ -50,7 +50,7 @@ a {
 .game-card {
     height: 400px;
     width: 275px;
-    border: 1px solid rgb(197, 193, 193);
+    border: 1px solid $card-border;
     border-radius: 10px;
     padding: 0px 2px;
 }
@@ -68,7 +68,7 @@ a {
 .game-card_avatar {
     height: 40px;
     width: 40px;
-    background-color: $raiting-orange;
+    background-color: $rating-orange;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -76,7 +76,6 @@ a {
 }
 .game-card_rating {
     color: white;
-    font-family: 'segoe ui';
     font-size: large;
 }
 .game-card_cover {
@@ -92,7 +91,6 @@ a {
 }
 .title_name {
     width: 100%;
-    font-family: 'segoe ui';
     font-size: 85%;
     font-weight:400;
     text-overflow: ellipsis;
@@ -101,19 +99,39 @@ a {
 }
 .title_date {
     width: 100%;
-    font-family: 'segoe ui';
     font-size: 70%;
     font-weight: 200;
 }
 .game-card_summary {
-    height: 148px;  /* for text with ellipis NOT WORKING*/
-    font-family: 'segoe ui';
+    height: 148px;
+    margin: 2px 10px;
+}
+.summary__text {
     font-weight: 300;
     font-size: 70%;
-    margin: 2px 10px;
+    line-height: 1.1rem;
+    --max-lines: 8;
+    position: relative;
+    max-height: 8.8rem;
     overflow: hidden;
-    text-overflow: ellipsis;
+    padding-right: 1rem;
 }
+////////////////////////////////
+.summary__text::before {
+    position: absolute;
+    content: "...";
+    bottom: 0;
+    right: 0;
+  }
+.summary__text::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    width: 1rem;
+    height: 1rem;
+    background: white;
+}
+/////////////////////////////////
 .game-card_actions {
     height: 10%;
 }
@@ -123,5 +141,6 @@ a {
 .cover-image {
     width: 100%;
     height: 100%;
-    object-fit:fill;
+    // object-fit:fill;
+    object-fit: contain;
 }
