--- a/src/app/gameinfo-page/gameinfo-page.component.scss
+++ b/src/app/gameinfo-page/gameinfo-page.component.scss
@@ -57,7 +57,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: $raiting-orange;
+    background-color: $rating-orange;
     height: 58%;
     width: 20%;
     border-radius: 5px;
